# apecrunch

./: .gitignore  Cargo.toml  README.md  log.txt  log2.txt
benches/: op.rs  parse.rs  sqrt.rs  vartbl.rs
etc/: theme.toml
src/: functions.rs  history.rs  lib.rs  main.rs  number.rs  op_engine.rs  parser.rs  session.rs  template.rs  tui.rs  variable.rs
