[package]
name = "apecrunch"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = { version = "0.18.0", features = [ "toml", "crossterm-backend" ] }
simple-error = "0.2.3"
fraction = { version = "0.11.0", features = [ "with-serde-support" ] }
lazy_static = "1.4.0"
regex = "1.5.6"
serde = {version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
uuid = { version = "1.1.2", features = [ "v4" , "serde" ] }
lz4_flex = "0.9.3"
directories = "4.0.1"