[package]
name = "apecrunch"
version = "0.0.3"
edition = "2021"
license = "GPL-3.0-only"
description = "A SpeedCrunch inspired TUI calculator, for apes..."
keywords = ["SpeedCrunch", "calculator", "tui", "math", "cli"]
catagories = ["command-line-utilities", "science", "mathematics"]
repository = "https://github.com/Gip-Gip/apecrunch"
readme = "README.md"
homepage = "https://openapeshop.org/software/apecrunch/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"                                                               # Binary storage format
clap = { version = "3.2.21", features = ["derive", "unicode"] }                 # Command line argument parser
cursive = { version = "0.19.0", features = ["toml", "crossterm-backend"] }      # TUI
directories = "4.0.1"                                                           # Used to grab the default config/data directories per OS
fraction = { version = "0.11.1", features = ["with-serde-support"] }            # Fractional numbers
lazy_static = "1.4.0"                                                           # Caching regex compilations
lz4_flex = "0.9.5"                                                              # Fast data compression
regex = "1.6.0"                                                                 # Regex for various uses
serde = {version = "1.0.144", features = ["derive"] }                           # Serialization tool
serial_test = "0.8.0"                                                           # Serial tests(why isn't this a default rust feature)
simple-error = "0.2.3"                                                          # Simple error creation
termcolor = "1.1.3"                                                             # Terminal colors n stuff
toml = "0.5.9"                                                                  # Toml Serialization
uuid = { version = "1.1.2", features = ["v4" , "serde"] }                       # UUID generation

[dev-dependencies]
criterion = "0.3.6"

[[bench]]
name = "sqrt"
harness = false